# shifta

./: .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Backend.sln  Dockerfile
backend/Backend.Api/: Backend.Api.csproj  Backend.Api.http  Program.cs  appsettings.json
backend/Backend.Api/Clients/: IOptimizerClient.cs
backend/Backend.Api/Controllers/: EmployeesController.cs  PreferencesController.cs  (+5 more)
backend/Backend.Tests/: ApiIntegrationTests.cs  Backend.Tests.csproj  CustomWebApplicationFactory.cs  EmployeeServiceTests.cs  OptimizerClientTests.cs  PreferenceServiceTests.cs  ScheduleLifecycleTests.cs  ShiftServiceTests.cs  TestDbContextFactory.cs
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css  main.tsx
scheduling-backend/: .dockerignore  Dockerfile  README.md  export_openapi.py  main.py  pyproject.toml
scheduling-backend/src/scheduling/: printer.py  types.py
scheduling-backend/src/scheduling/api/: app.py  dto.py  routes.py
scheduling-backend/src/scheduling/models/: employee.py  shift.py  solution.py
scheduling-backend/src/scheduling/models/preferences/: base.py  prefer_period.py  prefer_shift.py  unavailable.py
scheduling-backend/src/scheduling/solver/: handlers.py  metrics.py  scheduler.py
scheduling-backend/tests/: test_api.py  test_basic_scheduling.py  test_multiple_solutions.py  test_preferences.py  test_rest_optimization.py  test_validation.py
scripts/: generate-optimizer-client.sh
(+52 files in other folders)
